Metadata/unpackaged/objects/System_Log__c.object
<CustomObject>
    <fields>
        <fullName>CallerJobID__c</fullName>
        <label>CallerJobID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <label>Error Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Instance__c</fullName>
        <label>Instance</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Link__c</fullName>
        <formula>HYPERLINK(&quot;https://na3.salesforce.com/&quot; &amp; Id,  SFDC_Id__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <label>Object</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProcessId__c</fullName>
        <label>Process Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Process_Name__c</fullName>
        <label>Process Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Process__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Process</label>
        <referenceTo>System_Log__c</referenceTo>
        <relationshipLabel>System Logs</relationshipLabel>
        <relationshipName>System_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <label>Project Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDC_Id__c</fullName>
        <label>SFDC Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Severity__c</fullName>
        <label>Severity</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <formula>IF(ISBLANK(Error_Message__c ),IMAGE(&quot;/servlet/servlet.FileDownload?file=015i0000001uD9V&quot;, &quot;*&quot;, 16,16), IMAGE(&quot;/servlet/servlet.FileDownload?file=015i0000001uCuk&quot;, &quot;*&quot;, 16,16))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Step_Name__c</fullName>
        <label>Step Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>System Log</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>L-{00000}</displayFormat>
        <label>Item</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>System Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>